src/components/WeatherCart/WeatherCard.css
.weather-card-container {
  max-width: 1100px;
  margin-top: 3.5rem !important;
  margin: auto;
  display: grid;
  grid-template-columns: repeat(6, minmax(150px, 1fr));
  gap: 2rem;
  align-items: end;
}
.weather-card-container > div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

.date {
  color: #444;
  font-family: Roboto;
  font-size: 1.125rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}

.main-card-body {
  color: white;
  border-radius: 0.4375rem;
  background: linear-gradient(180deg, #464646 0%, #1d2540 100%);
  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.15);
}
.weather-condition {
  position: relative;
  display: flex;
  gap: 4px;
  align-items: center;
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
  padding: 0.7rem 1.5rem;
}
.weather-condition::before {
  position: absolute;
  content: "";
  width: 100%;
  height: 0.1px;
  background: rgba(255, 255, 255, 0.2);
  top: 3.5rem;
}
.weather-condition > span {
  color: #fff;
  text-align: center;
  font-family: Roboto;
  font-size: 1.1875rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}
.weather-details {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem 0;
}
.weather-details > span {
  color: #fff;
  text-align: center;
  font-family: Roboto;
  font-size: 0.9375rem;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  padding: 0.1rem 0;
}
.calender-container > span {
  color: #444;
  font-family: Roboto;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}
.calender {
  display: flex;
  align-items: center;
  gap: 5px;
  border-radius: 3px;
  border: 1px solid #464646;
  background: #d9d9d9;
  padding: 5px 10px;
}
.calender > span {
  color: #444;
  font-family: Roboto;
  font-size: 13px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
}
.weather-details-title {
  display: flex;
  flex-direction: column;
  gap: 1.2rem;
  margin: 1rem 0;
}
.weather-details-title > span {
  color: #000;
  font-family: Roboto;
  font-size: 15px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

